# book-recommendation-system-ML-Project

./: ARCHITECTURE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
artifacts/: model.pkl  ratings.pkl
notebooks/: BookRecommendationSystem.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_preprocessing.py  model_preparation.py
src/pipelines/: data_pipeline.py  prediction_pipeline.py  training_pipeline.py
