[project]
name = "book-recommendation-system-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.127.0",
    "matplotlib>=3.3.1",
    "numpy>=1.19.1",
    "pandas>=1.1.0",
    "pylint>=4.0.4",
    "requests>=2.32.3",
    "scikit-learn>=0.23.2",
    "scipy>=1.5.2",
    "seaborn>=0.10.1",
    "streamlit>=1.52.2",
    "uvicorn>=0.30.1",
]
